community/objects/Rate__c.object
<CustomObject>
    <fields>
        <fullName>Airfare__c</fullName>
        <label>Airfare</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BDM_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BDM Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Over_12_Bill_Rate_ADJ__c</fullName>
        <label>Base Wage - Over 12 Bill Rate (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Over_12_Bill_Rate_Actual__c</fullName>
        <label>Base Wage - Over 12 Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Over_12_Bill_Rate__c</fullName>
        <label>Base Wage - Over 12 Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Over_12_Pay_Rate_Actual__c</fullName>
        <label>Base Wage - Over 12 Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Over_12_Pay_Rate__c</fullName>
        <label>Base Wage - Over 12 Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Over_40_Bill_Rate_ADJ__c</fullName>
        <label>Base Wage - Over 40 Bill Rate (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Over_40_Bill_Rate_Actual__c</fullName>
        <label>Base Wage - Over 40 Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Over_40_Bill_Rate__c</fullName>
        <label>Base Wage - Over 40 Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Over_40_Pay_Rate_Actual__c</fullName>
        <label>Base Wage - Over 40 Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Over_40_Pay_Rate__c</fullName>
        <label>Base Wage - Over 40 Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Over_8_Bill_Rate_ADJ__c</fullName>
        <label>Base Wage - Over 8 Bill Rate (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Over_8_Bill_Rate_Actual__c</fullName>
        <label>Base Wage - Over 8 Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Over_8_Bill_Rate__c</fullName>
        <label>Base Wage - Over 8 Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Over_8_Pay_Rate_Actual__c</fullName>
        <label>Base Wage - Over 8 Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Over_8_Pay_Rate__c</fullName>
        <label>Base Wage - Over 8 Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Regular_Bill_Rate_ADJ__c</fullName>
        <label>Base Wage - Regular  Bill Rate (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Regular_Bill_Rate_Actual__c</fullName>
        <label>Base Wage - Regular Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Regular_Bill_Rate__c</fullName>
        <label>Base Wage - Regular Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Regular_Pay_Rate_Actual__c</fullName>
        <label>Base Wage - Regular Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Wage_Regular_Pay_Rate__c</fullName>
        <label>Base Wage - Regular Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Benefits_burden__c</fullName>
        <label>Benefits burden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Over_12_Bill_Actual__c</fullName>
        <label>Call Back - Over 12 Bill Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Over_12_Bill_Rate_ADJ__c</fullName>
        <label>Call Back - Over 12 Bill Rate - (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Over_12_Bill_Rate__c</fullName>
        <label>Call Back - Over 12 Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Over_12_Pay_Rate_Actual__c</fullName>
        <label>Call Back - Over 12 Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Over_12_Pay_Rate__c</fullName>
        <label>Call Back - Over 12 Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Over_40_Bill_Rate_ADJ__c</fullName>
        <label>Call Back - Over 40 Bill Rate - (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Over_40_Bill_Rate_Actual__c</fullName>
        <label>Call Back - Over 40 Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Over_40_Bill_Rate__c</fullName>
        <label>Call Back - Over 40 Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Over_40_Pay_Rate_Actual__c</fullName>
        <label>Call Back - Over 40 Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Over_40_Pay_Rate__c</fullName>
        <label>Call Back - Over 40 Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Over_8_Bill_Rate_ADJ__c</fullName>
        <label>Call Back - Over 8 Bill Rate - (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Over_8_Bill_Rate_Actual__c</fullName>
        <label>Call Back - Over 8 Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Over_8_Bill_Rate__c</fullName>
        <label>Call Back - Over 8 Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Over_8_Pay_Rate_Actual__c</fullName>
        <label>Call Back - Over 8 Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Over_8_Pay_Rate__c</fullName>
        <label>Call Back - Over 8 Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Regular_Bill_Rate_ADJ__c</fullName>
        <label>Call Back - Regular Bill Rate - (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Regular_Bill_Rate_Actual__c</fullName>
        <label>Call Back - Regular Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Regular_Bill_Rate__c</fullName>
        <label>Call Back - Regular Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Regular_Pay_Rate_Actual__c</fullName>
        <label>Call Back - Regular Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Back_Regular_Pay_Rate__c</fullName>
        <label>Call Back - Regular Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Over_12_Bill_Rate_ADJ__c</fullName>
        <label>Charge - Over 12 Bill Rate (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Over_12_Bill_Rate_Actual__c</fullName>
        <label>Charge - Over 12 Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Over_12_Bill_Rate__c</fullName>
        <label>Charge - Over 12 Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Over_12_Pay_Rate_Actual__c</fullName>
        <label>Charge - Over 12 Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Over_12_Pay_Rate__c</fullName>
        <label>Charge - Over 12 Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Over_40_Bill_Rate_ADJ__c</fullName>
        <label>Charge - Over 40 Bill Rate (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Over_40_Bill_Rate_Actual__c</fullName>
        <label>Charge - Over 40 Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Over_40_Bill_Rate__c</fullName>
        <label>Charge - Over 40 Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Over_40_Pay_Rate_Actual__c</fullName>
        <label>Charge - Over 40 Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Over_40_Pay_Rate__c</fullName>
        <label>Charge - Over 40 Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Over_8_Bill_Rate_ADJ__c</fullName>
        <label>Charge - Over 8 Bill Rate (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Over_8_Bill_Rate_Actual__c</fullName>
        <label>Charge - Over 8 Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Over_8_Bill_Rate__c</fullName>
        <label>Charge - Over 8 Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Over_8_Pay_Rate_Actual__c</fullName>
        <label>Charge - Over 8 Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Over_8_Pay_Rate__c</fullName>
        <label>Charge - Over 8 Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Regular_Bill_Rate_ADJ__c</fullName>
        <label>Charge - Regular Bill Rate (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Regular_Bill_Rate_Actual__c</fullName>
        <label>Charge - Regular Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Regular_Bill_Rate__c</fullName>
        <label>Charge - Regular Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Regular_Pay_Rate_Actual__c</fullName>
        <label>Charge - Regular Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Regular_Pay_Rate__c</fullName>
        <label>Charge - Regular Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <formula>Job__r.Client__r.Id</formula>
        <label>Client Id (Hidden)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <formula>Department__r.Hospital__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Bonus__c</fullName>
        <label>Completion Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Rate Cards</relationshipLabel>
        <relationshipName>Rate_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Length_Wks__c</fullName>
        <label>Contract Length (Wks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>W2</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1099</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DT_Multiplier__c</fullName>
        <defaultValue>2</defaultValue>
        <label>DT Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>TR1__Train_Station__c</referenceTo>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>Allied Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWI  Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWI IT - Appleton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWI IT - Schaumburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Diem Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Diem Shift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expenses_Billable__c</fullName>
        <label>Expenses Billable</label>
        <picklist>
            <picklistValues>
                <fullName>All Inclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Expenses</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flight_1__c</fullName>
        <label>Flight #1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flight_2__c</fullName>
        <label>Flight #2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPN: Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPN: Non-Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA: Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA: Non-Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN: Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN: Non-Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payor: Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payor: Non-Clinical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GPM__c</fullName>
        <formula>IF( 
((Base_Wage_Regular_Bill_Rate_ADJ__c - Total_Burden__c) / Base_Wage_Regular_Bill_Rate_ADJ__c)&gt;=0
,
((Base_Wage_Regular_Bill_Rate_ADJ__c - Total_Burden__c) / Base_Wage_Regular_Bill_Rate_ADJ__c)
,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Hrs__c</fullName>
        <label>Guaranteed Hrs</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Holiday_Over_12_Bill_Rate_ADJ__c</fullName>
        <label>Holiday - Over 12 Bill Rate - (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Over_12_Bill_Rate_Actual__c</fullName>
        <label>Holiday - Over 12 Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Over_12_Bill_Rate__c</fullName>
        <label>Holiday - Over 12 Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Over_12_Pay_Rate_Actual__c</fullName>
        <label>Holiday - Over 12 Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Over_12_Pay_Rate__c</fullName>
        <label>Holiday - Over 12 Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Over_40_Bill_Rate_ADJ__c</fullName>
        <label>Holiday - Over 40 Bill Rate - (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Over_40_Bill_Rate_Actual__c</fullName>
        <label>Holiday - Over 40 Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Over_40_Bill_Rate__c</fullName>
        <label>Holiday - Over 40 Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Over_40_Pay_Rate_Actual__c</fullName>
        <label>Holiday - Over 40 Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Over_40_Pay_Rate__c</fullName>
        <label>Holiday - Over 40 Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Over_8_Bill_Rate_ADJ__c</fullName>
        <label>Holiday - Over 8 Bill Rate - (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Over_8_Bill_Rate_Actual__c</fullName>
        <label>Holiday - Over 8 Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Over_8_Bill_Rate__c</fullName>
        <label>Holiday - Over 8 Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Over_8_Pay_Rate_Actual__c</fullName>
        <label>Holiday - Over 8 Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Over_8_Pay_Rate__c</fullName>
        <label>Holiday - Over 8 Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Regular_Bill_Rate_ADJ__c</fullName>
        <label>Holiday - Regular Bill Rate - (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Regular_Bill_Rate_Actual__c</fullName>
        <label>Holiday - Regular Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Regular_Bill_Rate__c</fullName>
        <label>Holiday - Regular Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Regular_Pay_Rate_Actual__c</fullName>
        <label>Holiday - Regular Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holiday_Regular_Pay_Rate__c</fullName>
        <label>Holiday - Regular Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Bill_High__c</fullName>
        <label>Hourly Bill High</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Bill_Low__c</fullName>
        <label>Hourly Bill Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Pay_High__c</fullName>
        <label>Hourly Pay High</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Pay_Low__c</fullName>
        <label>Hourly Pay Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Housing_Package_Weekly_Cost__c</fullName>
        <label>Housing Package Weekly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Housing_Weekly_Per_Diem__c</fullName>
        <label>Housing Weekly Per Diem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <description>Takes the Job Status from the child job reporting object record.</description>
        <label>Job Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Job Rate Cards</relationshipLabel>
        <relationshipName>Rate_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Killed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Killed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M_I_Weekly_Per_diem__c</fullName>
        <label>M&amp;I Weekly Per diem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Markup2__c</fullName>
        <label>Markup</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Markup__c</fullName>
        <label>Markup Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Medical_Fees__c</fullName>
        <label>Medical Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_1__c</fullName>
        <label>Misc #1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_2__c</fullName>
        <label>Misc #2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OT_Multiplier__c</fullName>
        <defaultValue>1.5</defaultValue>
        <label>OT Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>On_Call_Straight_Bill_Rate_Actual__c</fullName>
        <label>On Call - Straight Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>On_Call_Straight_Bill_Rate__c</fullName>
        <label>On Call - Straight Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>On_Call_Straight_Pay_Rate__c</fullName>
        <label>On Call - Straight Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>On_Call_Straight_Rate_ADJ__c</fullName>
        <label>On Call - Straight Bill Rate - (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>On_Call_Straight_Rate_Actual__c</fullName>
        <label>On Call - Straight Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orientation_Billable__c</fullName>
        <label>Orientation - Billable?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Orientation_Over_12_Bill_Rate_ADJ__c</fullName>
        <label>Orientation - Over 12 Bill Rate - (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orientation_Over_12_Bill_Rate_Actual__c</fullName>
        <label>Orientation - Over 12 Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orientation_Over_12_Bill_Rate__c</fullName>
        <label>Orientation - Over 12 Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orientation_Over_12_Pay_Rate_Actual__c</fullName>
        <label>Orientation - Over 12 Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orientation_Over_12_Pay_Rate__c</fullName>
        <label>Orientation - Over 12 Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orientation_Over_40_Bill_Rate_ADJ__c</fullName>
        <label>Orientation - Over 40 Bill Rate - (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orientation_Over_40_Bill_Rate_Actual__c</fullName>
        <label>Orientation - Over 40 Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orientation_Over_40_Bill_Rate__c</fullName>
        <label>Orientation - Over 40 Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orientation_Over_40_Pay_Rate_Actual__c</fullName>
        <label>Orientation - Over 40 Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orientation_Over_40_Pay_Rate__c</fullName>
        <label>Orientation - Over 40 Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orientation_Over_8_Bill_Rate_ADJ__c</fullName>
        <label>Orientation - Over 8 Bill Rate - (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>